# evosuite-core

./: README.md  pyproject.toml
src/evosuite/: __init__.py  cli.py
src/evosuite/agent_os/: config.py  coordinator.py
src/evosuite/plugins/: __init__.py
